# dataset-creation-berberian-sound-studio

./: .gitignore  CITATION.bib  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  main.cpp
Scenes/GlassPour/: config.json
Source/: BubbleUtils.cpp  BubbleUtils.h  FluidSound.cpp  FluidSound.h  Integrators.h  Oscillator.cpp  Oscillator.h
Source/Integrators/: Integrators.cpp
raw/: bubble_size_0001.csv  bubble_size_0002.csv  bubble_size_0003.csv  bubble_size_0004.csv  bubble_size_0005.csv  bubble_size_0006.csv  bubble_size_0007.csv  bubble_size_0008.csv  bubble_size_0009.csv  bubble_size_0010.csv  bubble_size_0011.csv  bubble_size_0012.csv  bubble_size_0013.csv  bubble_size_0014.csv  bubble_size_0015.csv  bubble_size_0016.csv  bubble_size_0017.csv  bubble_size_0018.csv  bubble_size_0019.csv  bubble_size_0020.csv  bubble_size_0021.csv  bubble_size_0022.csv  bubble_size_0023.csv  bubble_size_0024.csv  bubble_size_0025.csv  bubble_size_0026.csv  bubble_size_0027.csv  bubble_size_0028.csv  bubble_size_0029.csv  bubble_size_0030.csv  bubble_size_0031.csv  bubble_size_0032.csv  bubble_size_0033.csv  bubble_size_0034.csv  bubble_size_0035.csv  bubble_size_0036.csv  bubble_size_0037.csv  bubble_size_0038.csv  bubble_size_0039.csv  bubble_size_0040.csv  (+291 more)
scripts/: generate_dataset.py  write_wav.py
